<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Express Service</string>
    <string name="lb_user">User:</string>
    <string name="lb_password">Password:</string>
    <string name="btn_enter">Sing In</string>
    <string name="btn_registerclient">Register Client</string>
    <string name="btn_registerorder">Register Order</string>
    <string name="btn_clientlist">Client List</string>
    <string name="btn_clientorders">Order List</string>
    <string name="btn_locations">Client Locations</string>
    <string name="lb_photo">Photo</string>
    <string name="lb_register">Client Registration</string>
    <string name="view_clientlist">Client List</string>
    <string name="txt_phoneNumber">Phone Number</string>
    <string name="txt_clientName">Client Name</string>
    <string name="txt_welcome">Welcome:</string>


    <string name="link_register">Sing Up</string>
    <string name="err_user">Incorrect User</string>
    <string name="err_user_pass">Incorrect User or Password</string>
    <string name="err_password">Incorrect Password</string>
    <string name="err_passwordagain">Incorrect Password Again</string>
    <string name="err_username_exists">Username already exits</string>
    <string name="lb_name">Name</string>
    <string name="lb_lastname">Last Name</string>
    <string name="lb_username">Username</string>
    <string name="lb_userpassword">Password</string>
    <string name="lb_passwordagain">Password Again</string>
    <string name="lb_phonenumber">Phone Number</string>
    <string name="lb_location">Home Address</string>
    <string name="lb_birthday">Birthday</string>
    <string name="lb_location_map">Set Location</string>
    <string name="lb_user_type">User Type</string>
    <string name="btn_register">Create Account</string>
    <string name="btn_create">Create</string>
    <string name="err_rname">Name is Invalid</string>
    <string name="err_rlastname">Last Name is Invalid</string>
    <string name="err_rusername">Username is Invalid</string>
    <string name="err_rpassword">Password is Invalid</string>
    <string name="err_rpasswordagain">Password Again should be equals to Password</string>
    <string name="err_rphonenumber">Phone Number should be Integer Number</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="lb_registerperson">Person Register</string>
    <string name="view_personlist">Person List</string>
    <string name="view_deliverymanlist">Delivery Man List</string>
    <string name="view_personlocation">Person Locations</string>
    <string name="view_deliverymanlocation">Delivery Man Locations</string>
    <string name="txt_latitude">Latitude</string>
    <string name="txt_longitude">Logitude</string>
    <string name="txt_savelocation">Save current Location?</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>



    <string-array name="list_user_type">
        <item name="client_item">Client</item>
        <item name="deliveryman_item">Delivery Man</item>
    </string-array>
</resources>
