<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    tools:context="com.example.asus.mexpress.models.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lb_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:text="@string/lb_register"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:ems="4"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:ems="7"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_lastname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:ems="4"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_lastname"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_lastname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:ems="7"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:ems="4"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_phonenumber"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:ems="7"
            android:inputType="textPersonName|number|phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:ems="4"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_location"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:ems="7"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_location_map"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="3"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_location_map"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />
        <ImageButton
            android:id="@+id/img_button_map"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="1"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

        <TextView
            android:id="@+id/lb_location_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_birthday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:ems="4"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_birthday"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_birthday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:clickable="true"
            android:ems="7"
            android:focusable="false"
            android:inputType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="3"
            android:gravity="right|center_vertical"
            android:text="@string/lb_photo"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_camera" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:onClick="validateRegisterFields"
        android:text="@string/btn_register"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>
