<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account_user_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus.mexpress.models.CreateAccountUser">

    <TextView
        android:id="@+id/lb_appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:text="@string/btn_register"
        android:textColor="#2da948"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="3"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="6"
            android:gravity="bottom"
            android:inputType="textPersonName"
            android:textColorLink="@android:color/holo_green_dark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="3"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_username"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="6"
            android:gravity="bottom"
            android:inputType="textPersonName"
            android:textColorLink="@android:color/holo_green_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="3"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_password"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="6"
            android:gravity="bottom"
            android:inputType="textPassword"
            android:textColorLink="@android:color/holo_green_dark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_passwordagain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="3"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_passwordagain"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_passwordagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="6"
            android:gravity="bottom"
            android:inputType="textPassword"
            android:textColorLink="@android:color/holo_green_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_user_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="3"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_user_type"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/list_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:ems="6"
            android:gravity="bottom"
            android:textColorLink="@android:color/holo_green_dark" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2da948"
            android:onClick="createAccountUser"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_create"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
