<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:icon="@mipmap/icon_app"
    android:orientation="vertical"
    tools:context=".models.LoginActivity">

    <TextView
        android:id="@+id/lb_appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/app_name"
        android:textColor="#2da948"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="35dp"
        android:paddingTop="35dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:srcCompat="@drawable/moto_express" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_usuario"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="3"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_user"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="6"
            android:gravity="bottom"
            android:inputType="textPersonName"
            android:textColorLink="@android:color/holo_green_dark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <TextView
            android:id="@+id/lb_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="3"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/lb_password"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="6"
            android:gravity="bottom"
            android:inputType="textPassword"
            android:textColorLink="@android:color/holo_green_dark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2da948"
            android:onClick="validateFields"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_enter"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
