<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.example.asus.mexpress.models.WelcomeActivity">

    <TextView
        android:id="@+id/sesion_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="15dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/app_name"
        android:textColor="#2da948"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        app:srcCompat="@drawable/moto_express" />

    <Button
        android:id="@+id/btn_registerclient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorAccent"
        android:onClick="registerClient"
        android:padding="10dp"
        android:text="@string/btn_registerclient"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="122dp" />

    <Button
        android:id="@+id/btn_clientlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorAccent"
        android:onClick="listClients"
        android:padding="10dp"
        android:text="@string/btn_clientlist"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="170dp" />

    <Button
        android:id="@+id/btn_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorAccent"
        android:onClick="showLocations"
        android:padding="10dp"
        android:text="@string/btn_locations"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="170dp" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/cast_abc_scrubber_control_off_mtrl_alpha"
        android:padding="10dp"
        android:onClick="sessionDestroy"
        android:textSize="16sp"
        android:textStyle="bold"
        app:srcCompat="@android:drawable/ic_lock_power_off" />
</LinearLayout>
